# sphersgeo

./: Cargo.toml  README.md  pyproject.toml  sphersgeo.pyi
.github/workflows/: CI.yml  build.yml  test.yml  test_python.yml  test_rust.yml
python/from_wcs/: __init__.py  from_wcs.py
python/sphersgeo/: __init__.py  from_wcs.py
src/: angularbounds.rs  angularpolygon.rs  arcstring.rs  collection.rs  edgegraph.rs  geometry.rs  geometrycollection.rs  lib.rs  sphericalgraph.rs  sphericalpoint.rs  sphericalpolygon.rs  vectorpoint.rs
tests/: helpers.py  test_arc.py  test_arcstring.py  test_basic.py  test_point.py  test_polygon.py  test_sphericalpoint.py  test_sphericalpolygon.py  test_sphericalpolygon_intersection.py  test_sphericalpolygon_union.py  test_vectorpoint.py
tests/data/: footprints.py
