[package]
name = "sphersgeo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sphersgeo"
crate-type = ["cdylib"]

[dependencies]
kiddo = "5.0.3"
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.23.0"
pyo3 = "0.23.3"
