[package]
name = "sphersgeo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sphersgeo"
crate-type = ["cdylib"]

[dependencies]
kiddo = "5.2.2"
ndarray = { version = "0.16.1", features = ["rayon"], optional = true }
numpy = { version = "0.25.0", optional = true }
pyo3 = { version = "0.25.1", optional = true }

[features]
default = []
ndarray = ["dep:ndarray"]
py = ["dep:pyo3", "ndarray", "dep:numpy"]
