[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "sphersgeo"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest", "gwcs"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module", "py"]
